# CodePilot

./: .gitignore  LICENSE  README.md  pyproject.toml
codepilot/: __init__.py  __main__.py  cli.py  onboarding.py
codepilot/agents/: __init__.py  builder.py  mcp_config.py  patches.py  prompts.py  runner.py  tools.py
codepilot/agents/callbacks/: __init__.py  guardrails.py  human_in_loop.py  lifecycle.py
codepilot/agents/tools/: __init__.py  debug_tools.py  environment.py  exec.py  fs.py  git.py  memory_tools.py  notion_tools.py  planning.py  slack_hitl.py  state.py  testing.py  validation.py  workspace.py
codepilot/config/: __init__.py  keys.py  manager.py  models.py
codepilot/core/: __init__.py  agent.py  drift.py  exceptions.py  global_memory.py  memory.py  permissions.py  renderer.py  session.py  summarizer.py  workspace.py
codepilot/llm/: __init__.py  ollama.py  openrouter.py  provider.py
codepilot/mcp/: __init__.py
codepilot/mcp/servers/: __init__.py  _env.py  bash_server.py  code_analysis_server.py  debug_server.py  environment_server.py  filesystem_server.py  git_server.py  github_server.py  memory_server.py  planning_server.py  testing_server.py  todo_server.py  webdev_server.py  workspace_server.py
codepilot/memory/: __init__.py  service.py
codepilot/utils/: __init__.py  constants.py  logger.py
