[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codepilot"
version = "2.0.0"
description = "Autonomous AI coding assistant powered by Google ADK multi-agent architecture and MCP servers"
authors = [{name = "Bhanu Prakash"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ai", "coding-assistant", "llm", "mcp", "autonomous-agent", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "pydantic>=2.0",
    # ADK multi-agent framework
    "google-adk>=1.0.0",
    "google-genai>=1.0.0",
    "mcp>=1.0.0",
    # FastMCP (kept for any remaining MCP servers)
    "fastmcp>=0.1.0",
    # LiteLLM for OpenRouter/Ollama model routing through ADK
    "litellm>=1.40.0",
    "requests>=2.31.0",
    # Async SQLite driver required by ADK's DatabaseSessionService
    "aiosqlite>=0.19.0",
    # httpx for StreamableHTTP MCP connections (GitHub/Notion/Slack remote MCP)
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
codepilot = "codepilot.cli:main"

[project.urls]
Homepage = "https://github.com/bhanuprakash1212/CodePilot"
Repository = "https://github.com/bhanuprakash1212/CodePilot"
Issues = "https://github.com/bhanuprakash1212/CodePilot/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["codepilot*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"